=========================================================================
CHANGE LOG
=========================================================================

2016-04-19 Thomas Holder <thomas.holder@schrodinger.com>

	* 1.8.2.0

	* get_sasa_relative (command ported from Incentive PyMOL)

	* Color menu uses util.color_deep (ported from Incentive PyMOL)

	* "C > by rep" (ported from Incentive PyMOL)

	* fix crash when saving mesh PSE without map

2016-03-27 Jared Sampson

	* new setting: collada_background_box (default 0)
	  https://sourceforge.net/p/pymol/mailman/message/34961984/

2016-03-21 Thomas Holder, Gabriel Marques

	* pse_export_version: save 1.7.6 compatible PSEs by default

	* forward "set" to "set_bond" for bond-level settings

	* fetch: use http instead of ftp with default host

	* MOL2 export
	  - chain support (write substructure record)

	* MOL2 import
	  - more reliable resn reconstruction
	  - hetatm=0 for subst_type=RESIDUE
	  - don't use root atom id for substructure mapping

	* set_name w/ map: update dependents (mesh, surface, volume)

	* skip mmCIF "CA ATOMS ONLY" detection (not needed anymore)

	* fix COLLADA export crash with transparency

	* fix load_traj crash w/ state-level settings

	* 1.8.1.2 (beta)

2016-03-03 Thomas Holder <thomas.holder@schrodinger.com>

	* new setting: auto_show_classified

	* cartoon/ribbon: auto-detect CA-only models

	* mmCIF reading of full sequence now independent of cif_use_auth

	* mmCIF ss assignment to full residue, not only CA

	* fix selection macros with wildcards and colon (:) residue ranges
	  (1.8.0 regression)

	* fix SCALE coordinate transformation for multi-model PDBs (e.g. 1hho)

	* fix logging of expressions which contain '''

2016-02-08 Thomas Holder <thomas.holder@schrodinger.com>

	* restore ignore_case=on default
	* new setting: ignore_case_chain (default off)
	  https://sourceforge.net/p/pymol/mailman/message/34815599/

	* new setting: cartoon_gap_cutoff

	* increase PYMOL_MAX_THREADS